--- a/PerfumesLeo/PerfumesLeo/Views/Shared/_Layout.cshtml
+++ b/PerfumesLeo/PerfumesLeo/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <link rel="stylesheet" href="~/css/carousel.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 0px)" href="~/css/small.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 500px)" href="~/css/medium.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 1050px)" href="~/css/large.css">
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
