--- a/PerfumesLeo/PerfumesLeo/Views/Home/Index.cshtml
+++ b/PerfumesLeo/PerfumesLeo/Views/Home/Index.cshtml
@@ -1,31 +1,194 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-}
+}   
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="carouselsite" class="carousel" data-ride="carousel">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/1.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/2.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/3.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/4.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/5.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/6.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/7.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/8.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/9.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/10.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/11.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/12.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/13.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/14.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/15.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/16.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/17.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/18.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/119.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/20.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/21.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/22.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="img-responsive" src="~/Content/Imagem/23.jpg" alt="imagem" style="height:100%;" />
+                        <div class="carousel-caption">
+                        </div>
+                    </div>                  
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+@section scripts{
+
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+
+	$('.carousel-item:eq(0)').addClass("ativo").show();
+
+	var texto = $(".ativo").attr("alt");
+	$('.carousel-item').prepend("<p>" + texto + "</p>");
+
+	setInterval(slide, 15000);
+
+	function slide(){
+	    if ($('.ativo').next().size()) {
+	        $('.ativo').fadeOut().removeClass("ativo").next().addClass("ativo");
+	        $('.ativo').delay(5500).fadeIn();
+		}else
+		{
+		    $('.ativo').fadeOut().removeClass("ativo");
+		    $('.carousel-item:eq(0)').delay(5500).fadeIn().addClass("ativo");
+		}
+
+		var texto = $(".ativo img").attr("alt");
+
+		$('.carousel-item p').hide().html(texto).delay(1500).fadeIn();
+
+	}
+
+
+
+});
+
+    </script>
+
+}
+
