loader e e-mail marketing

--- a/PerfumesLeo/PerfumesLeo/Views/Home/Carrinho.cshtml
+++ b/PerfumesLeo/PerfumesLeo/Views/Home/Carrinho.cshtml
@@ -46,7 +46,7 @@
         {
             <div class="row row-center linha-produto" item-id="@item.IdItem">
                 <div class="col-md-3">
-                    <img class="img-produto-carrinho" src="/images/produtos/large_@(item.produto.IdPrduto).jpg" />
+                    <img class="img-produto-carrinho" src="/images/produtos/large_@(item.produto.IdProduto).jpg" />
                 </div>
                 <div class="col-md-3">@(item.produto.Nome)</div>
                 <div class="col-md-2 text-center">R$ @(item.PrecoUnitario)</div>
