--- a/PerfumesLeo/PerfumesLeo/Content/Site.css
+++ b/PerfumesLeo/PerfumesLeo/Content/Site.css
@@ -22,3 +22,18 @@ select,
 textarea {
     max-width: 280px;
 }
+
+#loading {
+    display: none;
+    background-color: lightgray;
+    z-index: 999999;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 300px;
+    filter: alpha(opacity=75);
+    opacity: 0.75;
+}
