--- a/PerfumesLeo/PerfumesLeo/Views/Account/Register.cshtml
+++ b/PerfumesLeo/PerfumesLeo/Views/Account/Register.cshtml
@@ -31,10 +31,12 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default loader" value="Register" />
         </div>
     </div>
 }
+
+    <div id="loading"><img src="~/Content/Imagem/loader.gif" /></div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
