--- a/PerfumesLeo/PerfumesLeo/Views/Home/Cadastro.cshtml
+++ b/PerfumesLeo/PerfumesLeo/Views/Home/Cadastro.cshtml
@@ -125,7 +125,7 @@
                 </div>
                 <div class="form-group">
                     <button type="submit"
-                            class="btn btn-success">
+                            class="btn btn-success loader">
                         Finalizar Pedido
                     </button>
                 </div>
@@ -135,22 +135,24 @@
 
 }
 
+    <div id="loading"><img src="~/Content/Imagem/loader.gif" /></div>
+
 @section scripts{
+
+    @Scripts.Render("~/bundles/jqueryval")
 
     <script type="text/javascript">
 
         var precoprod = document.getElementById("precoprodutos");
         var frete = document.getElementById("ValorFrete");
         var precototal = document.getElementById("precototal");
-        
+
         $("#btnsend").click(function () {
 
             let token = $('[name=__RequestVerificationToken]').val();
 
             let valorCep = $("#Cliente_Endereco_Cep").val();
-
-            debugger;
-
+            
             $.ajax({
                 url: '@Url.Action("CorreiosCalc","Home")',
                 type: 'POST',
@@ -168,13 +170,7 @@
                     alert("Erro ao calcular prazo!")
                 }
             });
-
-
-
-
-
+            
         });
-    
-
     </script>
 }
